2011-04-27  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/command.c (help_command) src/win/winmain.h src/win/winmain.c
	(WinExit, ShutDown, WinCloseHelp, WinMain): Work-around for apparently
	well known html help bug, which causes spurious crahes on exit. Keep
	track of help window handle and try to close the window as soon as 
	possible. New function WinCloseHelp.

	Extensive update to color, linetype and fillstyle handling in windows
	terminal. Fixes several bugs and implements new options.

	* term/win.trm (WIN_id, WIN_opts, WIN_options): Add options "solid",
	"dashed", "background", "fontscale"	and "linewidth". Call new function
	GraphInitStruct to initialize graphwin. Inlcude font in term_options.
	* term/win.trm (WIN_point, WIN_filled_polygon): Handle dashed lines
	in drawgraph, not here. (WIN_filled_polygon): Use generalized
	W_fillstyle	call, shared with WIN_boxfill. (WIN_boxfill): Pass second
	corner as parameter, not width and height. Fixes spurious rounding
	errors during translation to graph coordinates. (help text): Document
	new options.
	* src/win/wgnuplib.h (GW): Reorder entries according to function.
	* src/win/wgraph.c (pattern_bitmaps): Fix double cross-hatch.
	(GraphInitStruct): New function. (MakePens, DestroyPens): Account for
	linewidth and sampling and create an additional "null" pen which is
	used for filled polygons and boxes. (MakeFonts, GraphEnhancedOpen)
	Account for fontscale. (draw_new_pens, draw_new_brush) New functions
	to (re)create brushes and pens. Always create a "solid" partner for
	the possibly "dashed" pen. Called by drawgraph.
	* src/win/wgraph.c (drawgraph): Reorder variables according to
	function. [W_line_type]: Save last LOGPEN instead of pen index. Make 
	use of draw_new_pens. Select background brush for line-type <= 
	LT_NODRAW (fix by Shigeharu Takeno, Bug 3192205). [W_fillstyle]: Unify
	code for filled boxes and polygons. Use draw_new_brush. [W_boxfill]: